# orchestratr

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  SPEC.md  herdr_e2e_tests.md  install.sh
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
docs/: README.md  RELEASE.md  RELEASING.md  package.json  pnpm-lock.yaml
docs/app/: layout.tsx
docs/app/(home)/: page.tsx
docs/content/docs/: index.mdx  meta.json  why.mdx
docs/lib/: shared.ts
fixtures/: herdr-contract.json
scripts/: release.sh
sdk/python/: README.md  pyproject.toml
sdk/python/orcr/: __init__.py
sdk/python/tests/: test_orcr.py
sdk/ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk/ts/recipes/: _common.ts  adversarial-verification.ts  classify-and-act.ts  fan-out-and-merge.ts  fix-until-green.ts  generate-and-filter.ts  tournament.ts
sdk/ts/scripts/: codegen.ts
sdk/ts/src/: client.ts  context.ts  errors.ts  generated.ts  index.ts  path.ts  scope.ts  wire.ts
sdk/ts/test/: codegen.test.ts  context.test.ts  path.test.ts  scope.test.ts  sdk.test.mjs
skill/: SKILL.md
skill/references/: cli.md  files.md  loops.md  patterns.md  sdk.md
spec/: 02-architecture.md  03-cli.md  04-execution.md  06-jobs.md  10-roadmap.md  README.md  cli-v2.md  codebase.md  decisions.md  issues.md  spec.md  todo.md  todos.md  v2.md
spec/_impl/: herdr-driver-reference.md  open-issues.md  spec-completeness.md
spec/cli-v2/: cli-v2-draft.md  design.md  orcr-cli-reference.html  references.md  review-1.md  review-2.md  review-3.md  review-4.md
spec/impl/: CODEBASE.md  herdr-driver-reference.md  known-issues.md  manual-e2e-results.md  manual-e2e-tests.md  master-prompt.md  open-issues.md  review-phase-notes.md
spec/milestones/: m2-agent-core.md
spec/v1/: 01-overview.md  03-cli.md  05-agents.md  07-tui.md  08-skill-sdk.md  09-testing.md
spec/v2/: spec.md
src/: api.rs  cli.rs  config.rs  cron.rs  daemon.rs  duration.rs  engine.rs  error.rs  events.rs  herdr.rs  home.rs  jobs.rs  lib.rs  lock.rs  mock.rs  path.rs  profile.rs  rundir.rs  scaffold.rs  service.rs  top.rs  wire.rs
src/driver/: contract.rs  integration.rs  mod.rs  protocol.rs  session.rs  transcript.rs
src/profile/: claude.rs  codex.rs  mock.rs  mod.rs  opencode.rs  pi.rs
src/server/: client.rs  completion.rs  discovery.rs  engine.rs  gc.rs  log.rs  loops.rs  mod.rs  params.rs
src/store/: mod.rs  schema.rs
src/top/: app.rs  mod.rs  model.rs
tests/: agent_e2e.rs  completion_e2e.rs  conformance_live.rs  e2e.rs  e2e_m1.rs  e2e_m2.rs  e2e_m3.rs  e2e_roundtrip.rs  gc_e2e.rs  handshake.rs  home_config.rs  loop_e2e.rs  recipe_e2e.rs  scaffold_preflight.rs  server_protocol.rs  skill_docs.rs  top_e2e.rs
tests/fixtures/: claude_session.jsonl  codex_agent_session.jsonl  codex_priority_session.jsonl  codex_response_session.jsonl
(+109 files in other folders)
