[package]
name = "orchestratr"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestratr"
path = "src/lib.rs"

[[bin]]
name = "orcr"
path = "src/bin/orcr.rs"

[[bin]]
name = "orchestratr"
path = "src/bin/orchestratr.rs"

[[bin]]
name = "orcr-mock-agent"
path = "src/bin/orcr-mock-agent.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
cron = "0.15"
dirs = "6"
iana-time-zone = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
signal-hook = "0.3"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.30.2"
crossterm = "0.29.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
