[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestratr"
version = "0.1.0"
description = "Thin typed wrapper around the orcr CLI — agent orchestration over herdr"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools]
packages = ["orcr"]
